<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/get_help"
        android:title="@string/get_help"
        android:icon="@drawable/ic_question_toolbar"
        android:visible="false"
        app:showAsAction="always"/>
</menu>