...

@HAPreviews
@Composable
private fun WelcomeInvitationScreenPreview() {
    HAThemeForPreview {
        WelcomeInvitationScreen(
            serverUrl = "http://homeassistant.local",
            onAcceptClick = {},
            onRejectClick = {},
            onLearnMoreClick = {},
        )
    }
}
...
