...
    private fun onSelectTLSCertificateClicked() {
        getContent.launch("*/*")
    }

    private fun onCheckTLSCertificatePassword(password: String) {
        lifecycleScope.launch {
            var ok: Boolean
            context?.contentResolver?.openInputStream(viewModel.tlsClientCertificateUri!!)!!.buffered().use {
                val keystore = KeyStore.getInstance("PKCS12")
                ok = try {
                    keystore.load(it, password.toCharArray())
                    true
                } catch (e: IOException) {
...
